# image-factory

./: .gitignore  README.md  pyproject.toml
assets/examples/: prompts.jsonl
docs/: architecture.md  mvp-roadmap.md  provider-adapter.md  stable-diffusion-integration.md  wenxin-diagnosis.md  wenxin-integration.md
scripts/: diagnose_wenxin_image.py  run_wenxin_batch.ps1
src/image_factory/: __init__.py  __main__.py  cli.py  config.py  input_loader.py  models.py  progress.py  rate_limiter.py  scheduler.py  sd_local.py  storage.py
src/image_factory/providers/: __init__.py  base.py  mock.py  wenxin.py
tests/: test_scheduler.py  test_sd_local.py  test_storage.py  test_wenxin_provider.py
tests/fixtures/fake_sd_root/sd_batch/: __main__.py
