[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "image-factory"
version = "0.1.0"
description = "Headless batch scheduler for external image generation APIs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["Pillow>=10"]

[project.scripts]
image-factory = "image_factory.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
